hide actions according to Action#showInSelectAction